--- a/mhm/src/main/webapp/WEB-INF/web.xml
+++ b/mhm/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,14 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>NovaEmpresa</display-name>
+    <servlet-name>NovaEmpresa</servlet-name>
+    <servlet-class>servlet.NovaEmpresa</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>NovaEmpresa</servlet-name>
+    <url-pattern>/NovaEmpresa</url-pattern>
+  </servlet-mapping>
 </web-app>
