--- a/mhm/src/main/webapp/WEB-INF/web.xml
+++ b/mhm/src/main/webapp/WEB-INF/web.xml
@@ -44,13 +44,37 @@
     <servlet-name>UnicaEntradaServlet</servlet-name>
     <url-pattern>/UnicaEntradaServlet</url-pattern>
   </servlet-mapping>
-  <filter>
-    <display-name>AutorizacaoFilter</display-name>
-    <filter-name>AutorizacaoFilter</filter-name>
+  
+
+<filter>
+    <filter-name>AF</filter-name>
     <filter-class>servlet.AutorizacaoFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>AutorizacaoFilter</filter-name>
-    <url-pattern>/AutorizacaoFilter</url-pattern>
-  </filter-mapping>
+</filter>
+
+<filter-mapping>
+    <filter-name>AF</filter-name>
+    <url-pattern>/entrada</url-pattern>
+</filter-mapping>
+
+<filter>
+    <filter-name>MF</filter-name>
+    <filter-class>servlet.MonitoramentoFilter</filter-class>
+</filter>
+
+<filter-mapping>
+    <filter-name>MF</filter-name>
+    <url-pattern>/entrada</url-pattern>
+</filter-mapping>
+
+<filter>
+    <filter-name>CF</filter-name>
+    <filter-class>servlet.ControladorFilter</filter-class>
+</filter>
+
+<filter-mapping>
+    <filter-name>CF</filter-name>
+    <url-pattern>/entrada</url-pattern>
+</filter-mapping>
+
+  
 </web-app>
