--- a/loja-virtual-repository/.classpath
+++ b/loja-virtual-repository/.classpath
@@ -11,5 +11,15 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Projetos/Alura/Spring-framework/bibliotecas/c3p0-0.9.5.3.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Projetos/Alura/Spring-framework/bibliotecas/mchange-commons-java-0.2.15.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
